name:               r2rt
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , containers
                  , pandoc >= 1.15.2.1
                  , filepath
                  , blaze-html
  ghc-options:      -threaded
  default-language: Haskell2010
